@@ -1247,7 +1247,7 @@ The `file_remoteDirectory` header provides the remote directory, and the `file_r
 
 ==== Using the `mv` Command
 
-The `mv` command moves files
+The `mv` command moves files.
 
 The `mv` command has no options.
 
@@ -1258,6 +1258,10 @@ If necessary, any necessary remote directories are created.
 The payload of the result message is `Boolean.TRUE`.
 The `file_remoteDirectory` header provides the original remote directory, and `file_remoteFile` header provides the file name.
 The new path is in the `file_renameTo` header.
+
+Starting with version 5.5.6, the `remoteDirectoryExpression` can be used in the `mv` command for convenience.
+If the "`from`" file is not a full file path, the result of `remoteDirectoryExpression` is used as the remote directory.
+The same applies for the "`to`" file, for example, if the task is just to rename a remote file in some directory.
 
 ==== Additional Information about FTP Outbound Gateway Commands
 
